--- a/app/src/main/res/layout/fragment_cars.xml
+++ b/app/src/main/res/layout/fragment_cars.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +23,7 @@
         android:layout_gravity="end"
         android:layout_margin="16dp"
         android:layout_marginBottom="80dp"
-        android:text="Insert Car"
+        android:text="@string/insert_car"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
