--- a/app/src/main/res/layout/fragment_customers.xml
+++ b/app/src/main/res/layout/fragment_customers.xml
@@ -10,7 +10,6 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +25,7 @@
         android:layout_gravity="end"
         android:layout_margin="16dp"
         android:layout_marginBottom="80dp"
-        android:text="Insert Customer"
+        android:text="@string/insert_customer"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
