--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.rentalcarmanager.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/draw_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/nav_cars"
@@ -19,24 +19,24 @@
     <fragment
         android:id="@+id/nav_customers"
         android:name="com.example.rentalcarmanager.ui.customers.CustomersFragment"
-        android:label="@string/menu_customers"
+        android:label="@string/draw_customer"
         tools:layout="@layout/fragment_customers" />
 
     <fragment
         android:id="@+id/nav_rentals"
         android:name="com.example.rentalcarmanager.ui.rentals.RentalsFragment"
-        android:label="@string/menu_rentals"
+        android:label="@string/draw_rental"
         tools:layout="@layout/fragment_rentals" />
     <fragment
         android:id="@+id/nav_branches"
         android:name="com.example.rentalcarmanager.ui.branches.BranchesFragment"
-        android:label="Branches"
+        android:label="@string/draw_branch"
         tools:layout="@layout/fragment_branches" />
 
     <fragment
-        android:id="@+id/nav_settings"
-        android:name="com.example.rentalcarmanager.ui.settings.SettingsFragment"
-        android:label="Settings"
-        tools:layout="@layout/fragment_settings" />
+        android:id="@+id/nav_queries"
+        android:name="com.example.rentalcarmanager.ui.query.QueryFragment"
+        android:label="@string/draw_queries"
+        tools:layout="@layout/fragment_queries" />
 
 </navigation>
