--- a/app/src/main/res/layout/info_queries.xml
+++ b/app/src/main/res/layout/info_queries.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    card_view:cardBackgroundColor="?attr/colorSurface"
     card_view:cardCornerRadius="12dp"
     card_view:cardElevation="6dp"
     card_view:cardUseCompatPadding="true">
@@ -14,31 +15,25 @@
         android:orientation="vertical"
         android:padding="12dp">
 
-        <!-- First dynamic line -->
         <TextView
             android:id="@+id/infoLine1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#000000" />
+            android:textSize="16sp" />
 
-        <!-- Second dynamic line -->
         <TextView
             android:id="@+id/infoLine2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:layout_marginTop="4dp"
-            android:textColor="#444444" />
+            android:layout_marginTop="4dp" />
 
-        <!-- Third dynamic line  -->
         <TextView
             android:id="@+id/infoLine3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:layout_marginTop="4dp"
-            android:textColor="#444444" />
+            android:layout_marginTop="4dp" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
